--- a/SimpleWeather.Android/Resources/layout/app_widget_2x2.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_2x2.xml
@@ -18,9 +18,9 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingBottom="2dp"
-        android:paddingRight="4dp"
-        android:paddingLeft="4dp"
         android:paddingEnd="4dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:paddingStart="4dp"
         android:paddingTop="2dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
@@ -47,7 +47,7 @@
             android:adjustViewBounds="true"
             android:maxHeight="75dp"
             android:scaleType="fitStart"
-            tools:src="@drawable/ic_home_fill_white_24dp" />
+            tools:src="@drawable/notification_temp_pos70" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -72,8 +72,8 @@
                 android:adjustViewBounds="true"
                 android:maxHeight="75dp"
                 android:scaleType="fitEnd"
-                android:src="@drawable/ic_weather_icon"
-                android:tint="@android:color/white" />
+                android:tint="@android:color/white"
+                tools:src="@drawable/ic_weather_icon" />
 
             <TextView
                 android:id="@+id/spacer"
@@ -131,9 +131,9 @@
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:paddingEnd="4dp"
-                    android:paddingStart="4dp"
                     android:paddingLeft="4dp"
                     android:paddingRight="4dp"
+                    android:paddingStart="4dp"
                     android:paddingTop="2dp"
                     android:text="@string/label_feelslike"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
@@ -147,9 +147,9 @@
                     android:layout_gravity="end"
                     android:ellipsize="end"
                     android:maxLines="1"
+                    android:paddingEnd="4dp"
                     android:paddingLeft="4dp"
                     android:paddingRight="4dp"
-                    android:paddingEnd="4dp"
                     android:paddingStart="4dp"
                     android:paddingTop="2dp"
                     android:text="--"
@@ -173,9 +173,9 @@
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:paddingBottom="2dp"
-                    android:paddingRight="4dp"
-                    android:paddingLeft="4dp"
                     android:paddingEnd="4dp"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
                     android:paddingStart="4dp"
                     android:text="@string/label_wind"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
@@ -189,9 +189,9 @@
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:paddingBottom="2dp"
-                    android:paddingRight="4dp"
-                    android:paddingLeft="4dp"
                     android:paddingEnd="4dp"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
                     android:paddingStart="4dp"
                     android:text="--"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
@@ -259,7 +259,6 @@
             android:layout_gravity="center_vertical"
             android:maxLines="1"
             android:padding="4dp"
-            android:text="--"
             android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
             android:textColor="@android:color/white"
             android:textSize="10sp"
