--- a/SimpleWeather.Android/Resources/layout/location_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/location_panel.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/location_panel_height">
 
@@ -34,8 +33,8 @@
             tools:text="New York, NY" />
 
         <LinearLayout
-            android:layout_height="match_parent"
             android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             app:layout_column="1">
 
             <android.support.v7.widget.AppCompatTextView
