--- a/SimpleWeather.Android/Resources/layout/activity_setup.xml
+++ b/SimpleWeather.Android/Resources/layout/activity_setup.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:fillViewport="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
     tools:context="SimpleWeather.Droid.Controls.SetupActivity">
@@ -39,14 +38,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                app:backgroundTint="@color/colorPrimaryLight"
                 android:drawableEnd="@drawable/ic_my_location_white_24dp"
-                android:drawableRight="@drawable/ic_my_location_white_24dp"
                 android:drawablePadding="4dp"
+                android:drawableRight="@drawable/ic_my_location_white_24dp"
                 android:padding="16dp"
                 android:text="@string/label_gpsfollow"
                 android:textAllCaps="false"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                app:backgroundTint="@color/colorPrimaryLight" />
 
             <LinearLayout
                 android:id="@+id/api_region"
@@ -86,10 +85,10 @@
                         android:id="@+id/api_spinner"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:backgroundTint="@android:color/darker_gray"
                         android:entries="@array/api_entries"
                         android:paddingBottom="12dp"
-                        android:paddingTop="12dp" />
+                        android:paddingTop="12dp"
+                        app:backgroundTint="@android:color/darker_gray" />
                 </android.support.v7.widget.CardView>
 
                 <View
