--- a/SimpleWeather.Android/Resources/layout/app_widget_4x1.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_4x1.xml
@@ -53,8 +53,8 @@
                     android:adjustViewBounds="true"
                     android:gravity="center"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/ic_weather_icon"
-                    android:tint="@android:color/white" />
+                    android:tint="@android:color/white"
+                    tools:src="@drawable/ic_weather_icon" />
 
                 <ImageView
                     android:id="@+id/condition_temp"
@@ -65,7 +65,7 @@
                     android:adjustViewBounds="true"
                     android:maxWidth="30dp"
                     android:scaleType="fitCenter"
-                    tools:src="@drawable/ic_home_fill_white_24dp" />
+                    tools:src="@drawable/notification_temp_pos70" />
 
             </LinearLayout>
 
@@ -104,7 +104,6 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:padding="4dp"
-            android:text="--"
             android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
             android:textColor="@android:color/white"
             android:textSize="12sp"
