--- a/SimpleWeather.Android/Resources/layout/app_widget_4x2.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_4x2.xml
@@ -62,9 +62,9 @@
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:paddingBottom="2dp"
+                    android:paddingEnd="4dp"
                     android:paddingLeft="4dp"
                     android:paddingRight="4dp"
-                    android:paddingEnd="4dp"
                     android:paddingStart="4dp"
                     android:text="--"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
@@ -96,9 +96,9 @@
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:paddingBottom="2dp"
+                    android:paddingEnd="4dp"
                     android:paddingLeft="4dp"
                     android:paddingRight="4dp"
-                    android:paddingEnd="4dp"
                     android:paddingStart="4dp"
                     android:text="--"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
@@ -132,9 +132,9 @@
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:paddingBottom="2dp"
+                    android:paddingEnd="4dp"
                     android:paddingLeft="4dp"
                     android:paddingRight="4dp"
-                    android:paddingEnd="4dp"
                     android:paddingStart="4dp"
                     android:text="--%"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
@@ -153,8 +153,8 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/details_panel"
-            android:layout_toRightOf="@+id/details_panel"
             android:layout_toLeftOf="@+id/clockdate_panel"
+            android:layout_toRightOf="@+id/details_panel"
             android:layout_toStartOf="@+id/clockdate_panel"
             android:orientation="vertical">
 
@@ -169,9 +169,9 @@
                     android:id="@+id/weather_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/spacer"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_alignLeft="@+id/spacer"
                     android:layout_alignStart="@+id/spacer"
                     android:layout_centerVertical="true"
                     android:layout_gravity="bottom"
@@ -183,8 +183,8 @@
                     android:paddingRight="2dp"
                     android:paddingTop="12dp"
                     android:scaleType="fitEnd"
-                    android:src="@drawable/ic_weather_icon"
-                    android:tint="@android:color/white" />
+                    android:tint="@android:color/white"
+                    tools:src="@drawable/ic_weather_icon" />
 
                 <TextView
                     android:id="@+id/spacer"
