--- a/SimpleWeather.Android/Resources/layout/app_widget_forecast_panel_medium.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_forecast_panel_medium.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="0dp"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:background="@null"
     android:orientation="vertical"
-    android:layout_weight="1"
-    tools:layout_width="72dp"
-    tools:layout_height="72dp">
+    tools:layout_height="72dp"
+    tools:layout_width="72dp">
 
     <TextView
         android:id="@+id/forecast_date"
@@ -38,9 +38,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="0dp"
         android:layout_gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="0dp">
 
         <TextView
             android:id="@+id/forecast_hi"
@@ -48,11 +48,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:maxLines="1"
+            android:text="--"
             android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
             android:textColor="@android:color/white"
             android:textSize="12sp"
             android:textStyle="bold"
-            android:text="--"
             tools:text="70º" />
 
         <TextView
@@ -60,9 +60,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:paddingEnd="2dp"
-            android:paddingStart="2dp"
-            android:paddingRight="2dp"
             android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:paddingStart="2dp"
             android:text="|"
             android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
             android:textColor="@android:color/white"
@@ -73,11 +73,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:maxLines="1"
+            android:text="--"
             android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
             android:textColor="@android:color/white"
             android:textSize="12sp"
-            android:maxLines="1"
-            android:text="--"
             tools:text="52º" />
 
     </LinearLayout>
