--- a/SimpleWeather.Android/Resources/layout/fragment_location_search.xml
+++ b/SimpleWeather.Android/Resources/layout/fragment_location_search.xml
@@ -15,20 +15,19 @@
 -->
 
 <!-- Layout parameters are set programmatically. -->
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:design="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    design:statusBarBackground="@null"
     android:background="#55000000"
-    android:elevation="@dimen/appbar_elevation">
+    android:elevation="@dimen/appbar_elevation"
+    design:statusBarBackground="@null">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stateListAnimator="@null"
-        android:elevation="2dp">
+        android:elevation="2dp"
+        android:stateListAnimator="@null">
 
     </android.support.design.widget.AppBarLayout>
 
@@ -36,11 +35,11 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="8dp"
+        android:background="#fafafa"
         android:paddingEnd="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:background="#fafafa"
+        android:paddingStart="8dp"
         design:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
