--- a/SimpleWeather.UWP/Controls/ForecastItem.xaml
+++ b/SimpleWeather.UWP/Controls/ForecastItem.xaml
@@ -47,17 +47,17 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBlock Name="ForecastDate" Style="{StaticResource ForecastDate}" Text="{Binding Date, FallbackValue=Thursday 29}" Grid.Row="0"/>
+        <TextBlock Name="ForecastDate" Style="{StaticResource ForecastDate}" Text="{x:Bind Forecasts.Date, FallbackValue=Thursday 29, Mode=OneWay}" Grid.Row="0"/>
         <Viewbox Name="WeatherBox" Style="{StaticResource ForecastIcon}" Grid.Row="1" Height="75">
-            <TextBlock Style="{StaticResource WeatherIcon}" Text="{Binding WeatherIcon, FallbackValue='&#xf00d;'}" />
+            <TextBlock Style="{StaticResource WeatherIcon}" Text="{x:Bind Forecasts.WeatherIcon, FallbackValue='&#xf00d;', Mode=OneWay}" />
         </Viewbox>
         <TextBlock Name="ForecastCondition" Style="{StaticResource ForecastCondition}" Grid.Row="2" 
-                   Text="{Binding Condition, FallbackValue='Scattered Thunderstorms'}"
+                   Text="{x:Bind Forecasts.Condition, FallbackValue='Scattered Thunderstorms', Mode=OneWay}"
                    Width="145" HorizontalAlignment="Left" TextWrapping="WrapWholeWords"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Grid.Row="3">
-            <TextBlock Name="ForecastHiTemp" Text="{Binding HiTemp, FallbackValue=70º}" Padding="10,5,5,5"
+            <TextBlock Name="ForecastHiTemp" Text="{x:Bind Forecasts.HiTemp, FallbackValue=70º, Mode=OneWay}" Padding="10,5,5,5"
                        Style="{StaticResource ForecastTemp}"/>
-            <TextBlock Name="ForecastLoTemp" FontSize="16" Text="{Binding LoTemp, FallbackValue=65º}"
+            <TextBlock Name="ForecastLoTemp" FontSize="16" Text="{x:Bind Forecasts.LoTemp, FallbackValue=65º, Mode=OneWay}"
                        Foreground="LightGray"
                        Style="{StaticResource ForecastTemp}" />
         </StackPanel>
