--- a/SimpleWeather.UWP/Controls/TextForecastItem.xaml
+++ b/SimpleWeather.UWP/Controls/TextForecastItem.xaml
@@ -22,19 +22,19 @@
             </Grid.RowDefinitions>
             <Viewbox Width="75" Grid.Row="0"
                      Margin="5" HorizontalAlignment="Left">
-                <TextBlock Text="{Binding WeatherIcon, FallbackValue='&#xf00d;'}" Style="{StaticResource WeatherIcon}"/>
+                <TextBlock Text="{x:Bind ViewModel.WeatherIcon, FallbackValue='&#xf00d;', Mode=OneWay}" Style="{StaticResource WeatherIcon}"/>
             </Viewbox>
             <StackPanel Orientation="Horizontal" Grid.Row="1">
                 <TextBlock Text="&#xf078;" Style="{StaticResource WeatherIcon}"
                            FontSize="18" Padding="5,0"/>
-                <TextBlock Text="{Binding PoP, FallbackValue='100%'}"
+                <TextBlock Text="{x:Bind ViewModel.PoP, FallbackValue='100%', Mode=OneWay}"
                            Foreground="White"
                            Padding="5,0" VerticalAlignment="Center"/>
             </StackPanel>
         </Grid>
         <Viewbox Name="FctTextBox" Grid.Column="1"
                  HorizontalAlignment="Left">
-            <TextBlock Name="FctText" Text="{Binding FctText, FallbackValue='Generally cloudy. A stray shower or thunderstorm is possible. High 76F. Winds SE at 10 to 15 mph.'}"
+            <TextBlock Name="FctText" Text="{x:Bind ViewModel.FctText, FallbackValue='Generally cloudy. A stray shower or thunderstorm is possible. High 76F. Winds SE at 10 to 15 mph.', Mode=OneWay}"
                        Foreground="White" Margin="10"
                        HorizontalAlignment="Left" TextWrapping="WrapWholeWords"/>
         </Viewbox>
