--- a/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
+++ b/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
@@ -364,6 +364,7 @@
                                 style="@style/WeatherDetails"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/pressure_state"
                                 android:layout_alignParentLeft="true"
                                 android:layout_alignParentStart="true"
                                 android:layout_below="@+id/atmosphere_label_border"
@@ -391,6 +392,7 @@
                                 style="@style/WeatherDetails"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/pressure_state"
                                 android:layout_alignParentEnd="true"
                                 android:layout_alignParentRight="true"
                                 android:layout_below="@+id/atmosphere_label_border"
@@ -492,6 +494,7 @@
                                 style="@style/WeatherDetails"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/wind_direction"
                                 android:layout_alignParentLeft="true"
                                 android:layout_alignParentStart="true"
                                 android:layout_below="@+id/feelslike_label"
@@ -517,6 +520,7 @@
                                 style="@style/WeatherDetails"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/wind_direction"
                                 android:layout_alignParentEnd="true"
                                 android:layout_alignParentRight="true"
                                 android:layout_below="@+id/feelslike"
@@ -551,6 +555,7 @@
                                 style="@style/WeatherDetails"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/sunrise_icon"
                                 android:layout_alignParentLeft="true"
                                 android:layout_alignParentStart="true"
                                 android:layout_below="@+id/sunriseset_label_border"
@@ -576,6 +581,7 @@
                                 style="@style/WeatherDetails"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/sunrise_icon"
                                 android:layout_alignParentEnd="true"
                                 android:layout_alignParentRight="true"
                                 android:layout_below="@+id/sunriseset_label_border"
@@ -586,6 +592,7 @@
                                 style="@style/WeatherDetails"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/sunset_icon"
                                 android:layout_alignParentLeft="true"
                                 android:layout_alignParentStart="true"
                                 android:layout_below="@+id/sunrise_label"
@@ -611,6 +618,7 @@
                                 style="@style/WeatherDetails"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/sunset_icon"
                                 android:layout_alignParentEnd="true"
                                 android:layout_alignParentRight="true"
                                 android:layout_below="@+id/sunrise_time"
