--- a/SimpleWeather.Android/Resources/layout/location_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/location_panel.xml
@@ -8,7 +8,8 @@
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:srcCompat="@color/colorPrimary" />
 
     <android.support.v7.widget.GridLayout
         android:layout_width="match_parent"
@@ -73,10 +74,10 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_gravity="center"
-        android:layout_weight="1"
+        android:indeterminate="true"
         android:indeterminateTint="@android:color/white"
         android:visibility="visible" />
 </android.support.v7.widget.CardView>
