--- a/SimpleWeather.Android/Resources/layout/weather_hrforecast_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/weather_hrforecast_panel.xml
@@ -9,7 +9,7 @@
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/hrforecast_date"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
@@ -49,7 +49,7 @@
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/hrforecast_condition"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:padding="4dp"
