--- a/SimpleWeather.Android/Resources/layout/weather_forecast_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/weather_forecast_panel.xml
@@ -9,7 +9,7 @@
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/forecast_date"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
@@ -34,7 +34,7 @@
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/forecast_condition"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:layout_weight="1"
